--- a/source/components/Welcome/index.scss
+++ b/source/components/Welcome/index.scss
@@ -2,9 +2,9 @@
     font-size: 60rpx;
     animation: Scale 1s;
     text-align: center;
-    color: #fff;
+    color: rgb(248, 23, 23);
     text{
-        color: #fff;
+        color: rgb(235, 15, 15);
     }
 }
 @keyframes Scale{
@@ -14,4 +14,11 @@
     to{
         transform: scale(1);
     }
+}
+
+image{
+    display:block; 
+    width: 60rpx;
+    height: 60rpx;
+    border-radius: 50%; 
 }
